# Mazerion

./: 00-first-dev.yml  01-dev.yml  02-lint.yml  04-integration.yml  07-staging.yml  ARCHITECTURE.md  CALCULATORS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FROZEN_FILES.md  LICENSE-MIT  PROJECT_SUMMARY.md  README.md  UpdateGH.ps1  build-android-libs.ps1  build-android.ps1  config.toml  deny.toml  generate_all_files.sh  ingredients.toml  qa.ps1  test-bindings.kts  verify.sh
.cargo/: config.toml
.github/workflows/: 00-first-dev.yml  01-dev.yml  02-lint.yml  03-test.yml  04-integration.yml  05-bench.yml  06-security.yml  07-staging.yml  08-master.yml  android-release.yml  ci.yml
Original_Package/: Build-Mazerion.ps1  DEPLOYMENT_GUIDE.md  QUICK_REFERENCE.md  README.md  WINDOWS_SETUP.md
Original_Package/mazerion/: .gitignore  Cargo.toml  PROJECT_SUMMARY.md  README.md  config.toml
Original_Package/mazerion/crates/db/: Cargo.toml
Original_Package/mazerion/crates/db/src/: sqlite.rs
Original_Package/mazerion/crates/gui/: Cargo.toml
Original_Package/mazerion/crates/gui/src/: lib.rs
Original_Package/mazerion/crates/tui/: Cargo.toml
Original_Package/mazerion/crates/tui/src/: lib.rs
android/: gradle.properties  local.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/calculators/: Cargo.toml
crates/calculators/src/: abv.rs  abv_tests.rs  acerglyn.rs  acid_addition.rs  acid_addition_tests.rs  alcohol_tolerance.rs  attenuation.rs  backsweetening.rs  backsweetening_tests.rs  batch_cost.rs  bench_trials.rs  blending.rs  blending_tests.rs  bochet.rs  bottling.rs  braggot.rs  brix_to_sg.rs  brix_to_sg_tests.rs  capsicumel.rs  carbonation.rs  carbonation_tests.rs  cost_calculator.rs  cyser.rs  dilution.rs  dilution_tests.rs  efficiency.rs  fermentation_timeline.rs  gallons_to_bottles.rs  gallons_to_bottles_with_losses.rs  gravity_from_ingredients.rs  great_mead.rs  hydromel.rs  hydrometer_correction.rs  ibu.rs  lactomel.rs  lib.rs  mash.rs  melomel.rs  metheglin.rs  nutrition.rs  (+23 more)
crates/calculators/tests/: advanced_tests.rs  basic_tests.rs  beer_tests.rs  brewing_tests.rs  consistency_tests.rs  edge_case_tests.rs  error_handling_tests.rs  finishing_tests.rs  integration_tests.rs  mead_styles_tests.rs  metadata_validation_tests.rs  mod.rs  property_tests.proptest-regressions  property_tests.rs  snapshot_tests.rs  utilities_tests.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: batch.rs  calc.rs  db.rs  mod.rs
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/core-api/src/: lib.rs
crates/core/src/: calc_input_tests.rs  calc_result_tests.rs  conversions.rs  error.rs  lib.rs  traits.rs  units.rs  units_tests.rs  validation.rs  validation_tests.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs  manager.rs  models.rs  sqlite.rs
crates/db/src/models/: acid.rs  adjunct.rs  bacteria.rs  batch.rs  enzyme.rs  extract.rs  fruit.rs  herb.rs  honey.rs  hop.rs  inventory.rs  malt.rs  mod.rs  nutrient.rs  recipe.rs  spice.rs  syrup.rs  tannin.rs  vegetable.rs  water_profile.rs  water_salt.rs  yeast.rs
crates/db/src/repositories/: acid.rs  adjunct.rs  bacteria.rs  batch.rs  encyclopedia.rs  enzyme.rs  extract.rs  fruit.rs  herb.rs  honey.rs  hop.rs  inventory.rs  malt.rs  mod.rs  nutrient.rs  recipe.rs  spice.rs  syrup.rs  tannin.rs  vegetable.rs  water_profile.rs  water_salt.rs  yeast.rs
crates/db/src/schemas/: acids.rs  adjuncts.rs  bacteria.rs  core.rs  enzymes.rs  equipment.rs  extracts.rs  fruits.rs  herbs.rs  honeys.rs  hops.rs  malts.rs  mod.rs  nutrients.rs  prediction.rs  profiles.rs  spices.rs  syrups.rs  tannins.rs  vegetables.rs  water.rs  water_profiles.rs  water_salts.rs  yeasts.rs
crates/db/tests/: adjunct_repository.rs  batch_tests.rs  extract_repository.rs  fruit_repository.rs  herb_repository.rs  honey_repository.rs  hop_repository.rs  inventory_tests.rs  malt_repository.rs  recipe_tests.rs  spice_repository.rs  syrup_repository.rs  vegetable_repository.rs  yeast_tests.rs
crates/ffi/: ANDROID_INTEGRATION.md  Cargo.toml  README.md  build.rs  generate-bindings.ps1  generate-bindings.sh  verify-complete.ps1
crates/ffi/include/: mazerion.h
crates/ffi/src/: batch.rs  calc.rs  database.rs  error.rs  lib.rs  mazerion.udl  memory.rs  types.rs  validation.rs
crates/ffi/tests/: batch_tests.rs  diagnostic_test.rs  integration_tests.rs  property_tests.rs  unit_tests.rs  validation_tests.rs
crates/gui/: Cargo.toml
crates/gui/src/: colors.rs  lib.rs  main.rs  state.rs  tabs.rs
crates/gui/src/tabs/: advanced.rs  basic.rs  beer.rs  beer_styles.rs  brewing.rs  conversions.rs  finishing.rs  helpers.rs  mead_encyclopedia.rs  mead_styles.rs  meads.rs  mod.rs  settings.rs  tabs_conversions.rs  utilities.rs
crates/gui/tests/: state_tests.rs
crates/tui/: Cargo.toml
crates/tui/src/: lib.rs
crates/tui/src/ui/: library.rs  player.rs
crates/voice/: Cargo.toml
crates/voice/src/: lib.rs
data/: beer_styles.v1.json  mead_styles.v1.json
docs/: DATABASE_GUIDE.md
examples/android/: MazerionViewModel.kt
qa_reports/qa_20251223_181627/: summary.json  summary.md
qa_reports/qa_20251223_181627/logs/: install_cargo_cargo-deadlinks.err.txt  machete.out.txt  wsl_loom.err.txt
qa_reports/qa_20251224_190213/: summary.json  summary.md
qa_reports/qa_20251224_190213/logs/: nextest.err.txt  rustup_show.out.txt
qa_reports/qa_20251225_104205/logs/: rustc_version.out.txt
qa_reports/qa_20251225_104223/logs/: cargo_metadata.out.txt  cargo_version.out.txt  fmt.out.txt  rustup_show.out.txt
qa_reports/qa_20251225_112308/logs/: fmt.out.txt  rustc_version.out.txt
qa_reports/qa_20251225_130038/logs/: cargo_version.out.txt  fmt.out.txt  rustup_show.out.txt
qa_reports/qa_20251225_131315/logs/: build_debug.err.txt  check.err.txt  clippy.err.txt  test_debug.err.txt  test_debug.out.txt
scripts/: setup-branch-protection.sh  setup-branches.sh
tests/: all_mead_styles_tests.rs  integration_test.rs
tools/line-guard/: Cargo.toml
(+49 files in other folders)
