[workspace]
resolver = "2"
members = ["crates/core", "crates/calculators", "crates/config"]

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.91.1"

[workspace.dependencies]
rust_decimal = { version = "1.39.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
thiserror = "2.0.17"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
panic = "deny"
unwrap_used = "warn"
expect_used = "warn"
todo = "deny"
unimplemented = "deny"
