[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/calculators",
    "crates/config",
    "crates/gui",
    "crates/tui",
    "crates/cli",
    "tools/line-guard",
    "crates/api",
    "crates/voice",
    "crates/ffi",
]

[workspace.package]
version = "0.7.0"
edition = "2024"
rust-version = "1.91.1"
license = "MIT OR Apache-2.0"
authors = ["Doctor"]

[workspace.dependencies]
rust_decimal = { version = "1.39.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
thiserror = "2.0.17"
eframe = "0.33.2"
egui = "0.33.2"
ratatui = "0.30.0-beta.0"
crossterm = "0.29.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
panic = "deny"
unwrap_used = "warn"
expect_used = "warn"
todo = "deny"
unimplemented = "deny"
