[package]
name = "mazerion-api"
version = "0.8.0"
edition = "2024"
authors = ["Doctor Tom"]
license = "MIT OR Apache-2.0"

[dependencies]
mazerion-core = { path = "../core" }
mazerion-calculators = { path = "../calculators" }
thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
rust_decimal = "1.39"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"