[package]
name = "mazerion-calculators"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
mazerion-core = { path = "../core" }
rust_decimal = { workspace = true }
linkme = "0.3.35"

[dev-dependencies]
proptest = "1.9.0"
quickcheck = "1.0.3"