[package]
name = "mazerion"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "mazerion"
path = "src/main.rs"

[dependencies]
mazerion-core = { path = "../core" }
mazerion-calculators = { path = "../calculators" }
mazerion-gui = { path = "../gui" }
mazerion-tui = { path = "../tui" }
mazerion-api = { path = "../api" }
eframe = "0.33.3"
rust_decimal = "1.39.0"
egui = "0.33.3"


[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
