[package]
name = "mazerion"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[[bin]]
name = "mazerion"
path = "src/main.rs"

[dependencies]
mazerion-core = { path = "../core" }
mazerion-calculators = { path = "../calculators" }
mazerion-db = { path = "../db", features = ["db"] }
clap = { version = "4.5.53", features = ["derive"] }
rust_decimal = { workspace = true }
anyhow = "1.0.100"
chrono = "0.4.42"  # Add this for date handling