[package]
name = "mazerion-db"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
mazerion-core = { path = "../core" }
rusqlite = { version = "0.32", features = ["bundled"], optional = true }

[features]
default = []
sqlite = ["dep:rusqlite"]

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
