[package]
name = "mazerion-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = ["db"]
db = []  # Keep as marker feature for compatibility
cannabis = []  # Optional paid feature

[lints]
workspace = true

[dependencies]
mazerion-core = { path = "../core" }
rusqlite = { version = "0.38.0", features = ["bundled"] }  # NOT optional anymore
rust_decimal = { workspace = true }