[package]
name = "mazerion-ffi"
version = "0.30.0"
edition = "2024"

[lib]
name = "mazerion_ffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
mazerion-api = { path = "../api" }
mazerion-calculators = { path = "../calculators" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
uniffi = "0.30.0"  # No features needed for cdylib
thiserror = "2.0.17"

[build-dependencies]
uniffi_build = { version = "0.30.0", features = ["builtin-bindgen"] }

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"