[package]
name = "mazerion-ffi"
version = "0.30.0"
edition = "2021"

[lib]
name = "mazerion_ffi"
crate-type = ["cdylib", "staticlib", "rlib"]

[[bin]]
name = "uniffi_bindgen"
path = "src/bin/uniffi_bindgen.rs"
required-features = ["bindgen"]

[dependencies]
mazerion-core = { path = "../core" }
mazerion-api = { path = "../api" }
uniffi = "0.30.0"
thiserror = "2.0"

[dev-dependencies]
mazerion-calculators = { path = "../calculators" }

[build-dependencies]
uniffi_build = { version = "0.30.0", features = ["builtin-bindgen"] }

[features]
bindgen = ["uniffi/cli"]

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"