[package]
name = "mazerion-ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]
name = "mazerion_ffi"

[lints]
workspace = true

[dependencies]
mazerion-core = { path = "../core" }
mazerion-calculators = { path = "../calculators" }
mazerion-db = { path = "../db", features = ["db"] }
uniffi = { version = "0.30.0", features = ["cli"] }
thiserror = "2.0.17"
rust_decimal = { workspace = true }

[build-dependencies]
uniffi = { version = "0.30.0", features = ["build"] }