[package]
name = "mazerion-gui"
version = "0.8.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Doctor"]

[dependencies]
mazerion-core = { path = "../core" }
mazerion-calculators = { path = "../calculators" }
eframe = "0.33.2"
egui = "0.33.2"
rust_decimal = "1.39.0"
serde = { version = "1.0.228", features = ["derive"] }

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
