[package]
name = "mazerion-gui"
version = "0.11.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Doctor"]

[dependencies]
mazerion-core = { path = "../core" }
mazerion-calculators = { path = "../calculators" }
eframe = "0.33.2"
egui = "0.33.2"
rust_decimal = "1.39.0"
serde = { version = "1.0.228", features = ["derive"] }
winit = "0.31.0-beta.2"
egui_extras = "0.33.3"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
