[package]
name = "mazerion-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
mazerion-core = { path = "../core" }
mazerion-calculators = { path = "../calculators" }
mazerion-config = { path = "../config" }
ratatui = "0.30.0-beta.0"
crossterm = "0.29.0"
rust_decimal = { workspace = true }
