[package]
name = "mazerion-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
mazerion-core = { path = "../core" }
mazerion-calculators = { path = "../calculators" }
ratatui.workspace = true
crossterm.workspace = true

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"