[package]
name = "mazerion-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = []
db = ["dep:rusqlite"]

[dependencies]
mazerion-core = { path = "../core" }
serde = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
