[package]
name = "mazerion-gui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
mazerion-core = { path = "../core" }
mazerion-calculators = { path = "../calculators" }
mazerion-config = { path = "../config" }
eframe = "0.29"
egui = "0.29"
rust_decimal = { workspace = true }
rust_decimal_macros = "1.36"
