[package]
name = "mazerion-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
mazerion-core = { path = "../core" }
mazerion-calculators = { path = "../calculators" }
mazerion-config = { path = "../config" }
ratatui = "0.29"
crossterm = "0.28"
rust_decimal = { workspace = true }
